[package]
name = "terki"
version = "0.1.0"
authors = ["Joshua Benuck <joshua_benuck@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17.7"
dirs = "3.0.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
anyhow = "1.0.32"
