[package]
name = "terki"
version = "0.1.0"
authors = ["Joshua Benuck <joshua_benuck@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17.7"
dirs = "3.0.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
anyhow = "1.0.32"
clap = "2.33.2"
reqwest = "0.10.7"
url = "2.1.1"
textwrap = "0.12.1"
shell-words = "1.0.0"
tokio = { version = "0.2.22", features = ["full"] }
